<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phone_Details"
    android:orientation="vertical"
   >

    <EditText
        android:id="@+id/barcode2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxHeight="30dp"
        android:text="@string/bar_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_model2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:text="@string/phone_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode2" />

    <EditText
        android:id="@+id/imei2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        android:text="@string/imei_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_model2" />

    <EditText
        android:id="@+id/description2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imei2" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description2">

        <RadioButton
            android:id="@+id/repairing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repairing"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/repairing_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reparing_completed"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/canceled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="Update"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
